--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <script src="./themes/js/html5shiv.min.js"></script>
         <script src="./themes/js/respond.min.js"></script>
     <![endif]-->
-
+    <link href="./themes/img/favicon.ico" rel="shortcut icon">
 </head>
 
 <body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top">
